[package]
name = "gpxstat"
version = "0.1.0"
authors = ["Bill Fraser <wfraser@codewise.org>"]
edition = "2018"

[dependencies]
anyhow = "1"
chrono = "0.4"
#strong-xml = "0.6"
#strong-xml = { path = "../ext/strong-xml/strong-xml" }
strong-xml = { git = "https://github.com/wfraser/strong-xml" }
structopt = "0.3"
